oracle版本改造（添加依赖，xml文件和sql文件改造，xxlJobServiceImpl文件修改）

--- a/xxl-job-admin/pom.xml
+++ b/xxl-job-admin/pom.xml
@@ -54,11 +54,18 @@
 			<version>${mybatis-spring-boot-starter.version}</version>
 		</dependency>
 		<!-- mysql -->
-		<dependency>
+		<!--<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql-connector-java.version}</version>
-		</dependency>
+		</dependency>-->
+
+        <!-- oracle -->
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.3</version>
+        </dependency>
 
 		<!-- xxl-job-core -->
 		<dependency>
