--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### web
-server.port=8080
+server.port=8088
 server.context-path=/xxl-job-admin
 
 ### resources
@@ -17,23 +17,30 @@ spring.freemarker.settings.number_format=0.##########
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 
 ### xxl-job, datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl_job?Unicode=true&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=root_pwd
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:oracle:thin:@//10.45.44.186:1521/ora122
+#spring.datasource.username=fj_audit
+#spring.datasource.password=fj_audit123
+spring.datasource.url=jdbc:oracle:thin:@//10.47.233.132:1521/t_audit_center
+spring.datasource.username=audit_user
+spring.datasource.password=BvsT6G23J
+
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/ORCL
+#spring.datasource.username=tpssprod
+#spring.datasource.password=tpssprod1
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=30
 spring.datasource.tomcat.test-on-borrow=true
-spring.datasource.tomcat.validation-query=SELECT 1
+spring.datasource.tomcat.validation-query=select 1 from dual
 spring.datasource.tomcat.validation-interval=30000
 
 ### xxl-job email
 spring.mail.host=smtp.qq.com
 spring.mail.port=25
-spring.mail.username=xxx@qq.com
-spring.mail.password=xxx
+spring.mail.username=451655144@qq.com
+spring.mail.password=tl18679458908
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
