oracle版本改造，报警邮箱授权码设置

--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -40,7 +40,7 @@ spring.datasource.tomcat.validation-interval=30000
 spring.mail.host=smtp.qq.com
 spring.mail.port=25
 spring.mail.username=451655144@qq.com
-spring.mail.password=tl18679458908
+spring.mail.password=klgfblgwpxdlbhdh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
